kubernetes/apps/external-services/immich/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: "${EXTERNAL_PORT}"
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: immich
  labels:
    kubernetes.io/service-name: immich
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: "${EXTERNAL_PORT}"
endpoints:
  - addresses:
      - "${EXTERNAL_HOST}"
