kubernetes/apps/external-services/immich/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
spec:
  ingressClassName: "external"
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
  rules:
    - host: "photos.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  name: http
  tls:
    - hosts:
        - "photos.${SECRET_DOMAIN}"
      secretName: "immich-tls"
